# histopath-file-handler

./: .gitignore  README.md  pyproject.toml
examples/: example.py  generate_tiff_sample.py
histopath_handler/: __main__.py  histopath_handler.py  requirements.txt
histopath_handler/_core/: constants.py  exceptions.py  interfaces.py  models.py  utils.py
histopath_handler/file_loaders/: loader_factory.py  openslide_loader.py  pyvips_loader.py
histopath_handler/image_extractors/: base_extractor.py  patch_extractor.py  region_extractor.py
histopath_handler/pyramid_builders/: deepzoom_builder.py  hpz_builder.py
